Bottom-box's layout changes added

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,7 @@ body{
 .conteudo-pagina{
     margin: 120px 0 120px 0;
     background-color: #e5e5e5;
+    position: relative;
 }
 
 .bloco-prato{
@@ -141,3 +142,4 @@ body{
 .selecionado{
     display: none;
 }
+
