--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,10 @@ body{
     box-sizing: border-box;
 }
 
+.negrito{
+    font-weight: bold;
+}
+
 .top-box{
     height: 92px;
     width: 100vw;
@@ -21,6 +25,7 @@ body{
     align-items: flex-start;
     justify-content: center;
     padding-left: 15px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .nome-restaurante {
@@ -40,11 +45,9 @@ body{
     position: relative;
 }
 
-.bloco-prato{
-    height: auto;
+.bloco-opcoes{
     margin-bottom: 27px;
     width: auto;
-    overflow-x: scroll;
 }
 
 .comando-bloco{
@@ -57,7 +60,6 @@ body{
 .container-opcoes{
     display: flex;
     width: auto;
-    height: auto;
     overflow-x: scroll;
 }
 
@@ -75,6 +77,7 @@ body{
     border: 0px;
     position: relative;
     box-sizing: border-box;
+    box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 }
 
 .certinho {
@@ -143,3 +146,83 @@ body{
     display: none;
 }
 
+
+.finalizacao-pedido{
+    display: none;
+    opacity: 1;
+    position: fixed;
+    width: 377px;
+    height: 353px;
+    z-index: 2;
+    background-color: #50D074;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    left: calc((100vw - 377px)/2);
+    top: calc((100vh - 353px)/2);
+    padding: 21px 25px 0px 25px;
+    align-items: center;
+    flex-direction: column;
+   justify-content: space-between;
+}
+
+.titulo-confirmacao{
+    font-size: 22px;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 28px;
+}
+
+.bloco-pedido{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 24px;
+}
+
+.nomes{
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.nomes p{
+    font-size: 22px;
+    color: #ffffff;
+    margin-top: 13px;
+}
+
+.precos{
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.precos p{
+    font-size: 22px;
+    color: #ffffff;
+    margin-top: 13px;
+    text-align: right;
+}
+
+.botao-confirma{
+    font-weight: bold;
+    font-size: 22px;
+    color: #50D074;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 333px;
+    height: 52px;
+    background: #FFFFFF;
+    border-radius: 100px;
+    margin: 24px 24px 0px 24px;
+    border: none;
+}
+
+.botao-cancelar{
+    font-size: 20px;
+    color: #FFFFFF;
+    background-color: #50D074;
+    border: none;
+    width: 333px;
+    height: 52px
+}
