--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body{
     border: 0px;
     position: relative;
     box-sizing: border-box;
+    text-align: left;
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 }
 
@@ -203,9 +204,6 @@ body{
 }
 
 .botao-confirma{
-    font-weight: bold;
-    font-size: 22px;
-    color: #50D074;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -216,6 +214,13 @@ body{
     border-radius: 100px;
     margin: 24px 24px 0px 24px;
     border: none;
+}
+
+.botao-confirma a{
+    font-weight: bold;
+    font-size: 22px;
+    color: #50D074;
+    text-decoration: none;
 }
 
 .botao-cancelar{
